@@ -9,6 +9,7 @@ import edu.colorado.phet.common.phetcommon.util.DefaultDecimalFormat;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.piccolophet.PhetPCanvas;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
+import edu.colorado.phet.linegraphing.common.LGColors;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel.GamePhase;
 import edu.umd.cs.piccolo.util.PBounds;
@@ -45,7 +46,8 @@ class ResultsNode extends PhetPNode {
                                                                  model.timer.time.get(),
                                                                  model.getBestTime( model.settings.level.get() ),
                                                                  model.isNewBestTime(),
-                                                                 model.settings.timerEnabled.get() );
+                                                                 model.settings.timerEnabled.get(),
+                                                                 LGColors.GAME_INSTRUCTION_COLORS );
                     gameOverNode.scale( 1.5 );
                     addChild( gameOverNode );
                     gameOverNode.setOffset( ( stageSize.getWidth() - gameOverNode.getFullBoundsReference().getWidth() ) / 2,
